--- a/public/saved.html
+++ b/public/saved.html
@@ -26,7 +26,7 @@
             <tr>
                 <td>Puerto Iguazú</td>
                 <td>Paraná</td>
-                <td style="background-color: #ea9999;">8,40 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #ea9999 !important;">8,40 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>25,00</td>
                 <td>28,00</td>
                 <td></td>
@@ -35,7 +35,7 @@
             <tr>
                 <td>Corrientes</td>
                 <td>Paraná</td>
-                <td style="background-color: #f6b26b;">2,27 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">2,27 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>6,50</td>
                 <td>7,00</td>
                 <td></td>
@@ -44,7 +44,7 @@
             <tr>
                 <td>Barranqueras</td>
                 <td>Paraná</td>
-                <td style="background-color: #f6b26b;">2,26 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">2,26 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>6,00</td>
                 <td>6,50</td>
                 <td></td>
@@ -53,7 +53,7 @@
             <tr>
                 <td>Goya</td>
                 <td>Paraná</td>
-                <td style="background-color: #f6b26b;">2,63 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">2,63 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
                 <td>5,20</td>
                 <td>5,70</td>
                 <td></td>
@@ -62,7 +62,7 @@
             <tr>
                 <td>Reconquista</td>
                 <td>Paraná</td>
-                <td style="background-color: #f6b26b;">2,30 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">2,30 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
                 <td>5,10</td>
                 <td>5,30</td>
                 <td></td>
@@ -71,7 +71,7 @@
             <tr>
                 <td>La Paz</td>
                 <td>Paraná</td>
-                <td style="background-color: #f6b26b;">2,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">2,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>5,80</td>
                 <td>6,15</td>
                 <td></td>
@@ -80,7 +80,7 @@
             <tr>
                 <td>Paraná</td>
                 <td>Paraná</td>
-                <td style="background-color: #f6b26b;">1,62 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">1,62 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>4,70</td>
                 <td>5,00</td>
                 <td></td>
@@ -89,7 +89,7 @@
             <tr>
                 <td>Santa Fe</td>
                 <td>Paraná</td>
-                <td style="background-color: #ea9999;">1,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #ea9999 !important;">1,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>5,30</td>
                 <td>5,70</td>
                 <td></td>
@@ -98,7 +98,7 @@
             <tr>
                 <td>Victoria</td>
                 <td>Paraná/Delta</td>
-                <td style="background-color: #ea9999;">1,93 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td style="background-color: #ea9999 !important;">1,93 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
                 <td>4,60</td>
                 <td>5,90</td>
                 <td></td>
@@ -107,7 +107,7 @@
             <tr>
                 <td>Rosario</td>
                 <td>Paraná</td>
-                <td style="background-color: #ea9999;">1,12 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #ea9999 !important;">1,12 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>5,00</td>
                 <td>5,25</td>
                 <td></td>
@@ -116,7 +116,7 @@
             <tr>
                 <td>Puerto Pilcomayo</td>
                 <td>Paraguay</td>
-                <td style="background-color: #fff2cc;">4,33 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #fff2cc !important;">4,33 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>5,35</td>
                 <td>6,00</td>
                 <td></td>
@@ -125,7 +125,7 @@
             <tr>
                 <td>Puerto Formosa</td>
                 <td>Paraguay</td>
-                <td style="background-color: #fff2cc;">4,43 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #fff2cc !important;">4,43 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>7,80</td>
                 <td>8,30</td>
                 <td></td>
@@ -134,7 +134,7 @@
             <tr>
                 <td>San Javier</td>
                 <td>Uruguay</td>
-                <td style="background-color: #f6b26b;">1,10 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">1,10 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
                 <td>8,00</td>
                 <td>10,00</td>
                 <td></td>
@@ -143,7 +143,7 @@
             <tr>
                 <td>Santo Tomé</td>
                 <td>Uruguay</td>
-                <td style="background-color: #fff2cc;">3,41 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+                <td style="background-color: #fff2cc !important;">3,41 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
                 <td>11,50</td>
                 <td>12,50</td>
                 <td></td>
@@ -152,7 +152,7 @@
             <tr>
                 <td>Paso de los Libres</td>
                 <td>Uruguay</td>
-                <td style="background-color: #fff2cc;">4,36 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #fff2cc !important;">4,34 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>7,50</td>
                 <td>8,50</td>
                 <td></td>
@@ -161,7 +161,7 @@
             <tr>
                 <td>Concordia</td>
                 <td>Uruguay</td>
-                <td style="background-color: #fff2cc;">4,24 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #fff2cc !important;">4,30 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>11,00</td>
                 <td>12,50</td>
                 <td></td>
@@ -170,7 +170,7 @@
             <tr>
                 <td>Concepción del Uruguay</td>
                 <td>Uruguay</td>
-                <td style="background-color: #f6b26b;">1,04 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">1,04 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>5,30</td>
                 <td>6,30</td>
                 <td></td>
@@ -179,7 +179,7 @@
             <tr>
                 <td>Boca Gualeguaychú</td>
                 <td>Uruguay</td>
-                <td style="background-color: #f6b26b;">0,78 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+                <td style="background-color: #f6b26b !important;">0,78 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
                 <td>2,90</td>
                 <td>3,10</td>
                 <td></td>
@@ -188,19 +188,19 @@
             <tr>
                 <td>Bahia Negra</td>
                 <td>Paraguay</td>
-                <td style="background-color: #cfe2f3;">5,31 <i class="fas fa-equals"></i></td>
+                <td style="background-color: #cfe2f3 !important;">5,31 <i class="fas fa-equals"></i></td>
                 <td>5,00</td>
                 <td>5,50</td>
                 <td></td>
-                <td><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: yellow;"></i></td>
+                <td><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: yellow !important;"></i></td>
             </tr>
         </table>
         <table class="leyenda-tabla-hidro">
-          <tr><td style="background-color: #6fa8dc;">aguas altas</td></tr>
-          <tr><td style="background-color: #cfe2f3;">aguas medias altas</td></tr>
-          <tr><td style="background-color: #fff2cc;">aguas medias</td></tr>
-          <tr><td style="background-color: #f6b26b;"> aguas medias bajas</td></tr>
-          <tr><td style="background-color: #ea9999;">aguas bajas</td></tr>
+          <tr><td style="background-color: #6fa8dc !important;">aguas altas</td></tr>
+          <tr><td style="background-color: #cfe2f3 !important;">aguas medias altas</td></tr>
+          <tr><td style="background-color: #fff2cc !important;">aguas medias</td></tr>
+          <tr><td style="background-color: #f6b26b !important;"> aguas medias bajas</td></tr>
+          <tr><td style="background-color: #ea9999 !important;">aguas bajas</td></tr>
         </table>
         <p>En Guairá, la afluencia a Itaipú se observa oscilante en el límite de las aguas bajas/medias bajas. A corto plazo se prevé que se mantenga con aumento de punta hacia las aguas medias bajas y el nivel de base se sostenga estable en aguas bajas, en asociación a la amplitud observada en la erogación en Porto Primavera (incremento de punta). En Itaipú, la erogación se observó con descenso de base en aguas bajas, y todavía con punta en aguas medias bajas. La descarga del río Iguazú persiste con base en aguas bajas, en asociación al déficit prolongado. Se espera que continúe con base en aguas bajas y punta en aguas medias bajas, fuertemente regulado en una condición por debajo de lo normal. La afluencia a Yacyretá se observó con incremento de punta en aguas medias bajas, en respuesta al aumento del aporte de la cuenca propia, en asociación a las últimas lluvias registradas (abundantes). Asimismo, por este efecto persistirá con base estable o con leve ascenso, en aguas bajas, durante los próximos días (si bien es presumible que la amplitud disminuya). A su vez, la erogación se observó con punta en aguas medias bajas y leve aumento de base, con previsión a corto plazo de continuar con base estable y punta estable o en leve disminución. Aguas abajo, el río Paraná en el tramo Corrientes - Goya se observa con incremento ocasional de punta en aguas medias bajas, asociado a las lluvias ocurridas sobre el Paraná argentino - paraguayo y al efecto del aporte en ruta. A corto plazo se prevé que persista con la dinámica observada, para observarse luego disminución de punta, si bien con base en leve incremento (probablemente con aproximación a aguas medias bajas en Corrientes) por efecto del gradual aumento de caudal del río Paraguay y la erogación estable en Yacyretá. Por otro lado, sobre La Paz - Rosario se observa en aguas bajas, con gradual aumento en los valores semanales, más significativo en La Paz por propagación del patrón observado aguas arriba.</p>
         <h4>Hidrogramas</h4>
