--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -57,11 +57,18 @@
     @media print {
 
       .print-header {
+        position: absolute;
+        top: -10mm;
+        left: 0;
         display: block;
         width: 100%;
         height: 40mm;
         text-align: center;
         z-index: 999;
+      }
+
+      body {
+        margin-top: 50mm; /* Add space so content doesn't overlap header */
       }
 
       #report_container {
