--- a/public/saved.html
+++ b/public/saved.html
@@ -4,13 +4,13 @@
     <div>
   <div class="container-reporte">
     <h2>Reporte diario</h2>
-    <div>Fecha de emisión: <b>16/05/2025</b></div>
+    <div>Fecha de emisión: <b>22/05/2025</b></div>
     <h3>Situación meteorológica</h3>
     <h4>Mapa de acumulado semanal</h4>
-    <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales_/2025/05/pp_semanal_20250509_surf.png></p>
+    <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales_/2025/05/pp_semanal_20250515_surf.png></p>
     <p>Para lo que resta del día se esperan precipitaciones sobre aportes al Paraná en territorio argentino por margen derecha, así como sobre aportes al Bermejo y Pilcomayo. Para lo que resta de la semana, se esperan precipitaciones en gran parte de la cuenca, con acumulados mayores esperados sobre el tramo medio e inferior del Paraguay, sobre el tramo del Paraná en territorio argentino - paraguayo y sobre aportes al Salado Juramento y aportes por margen derecha al Paraná en territorio argentino.</p>
     <h4>Mapa de pronóstico a 7 días</h4>
-    <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025051606.2025051612.suma.png></p>
+    <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025052206.2025052212.suma.png></p>
     <h3>Situación hidrológica</h3>
     <h4>Tabla de situación y perspectiva a corto plazo</h4>
     <table class="tabla-hidro">
@@ -24,171 +24,171 @@
         <td></td>
       </thead>
         <tr>
-            <td><a href="#hidrograma-9">Puerto Iguazú</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Puerto Iguazú" data-id="9" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;9">Puerto Iguazú</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">7,80 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">7,40 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>25,00</td>
             <td>28,00</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-19">Corrientes</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Corrientes" data-id="19" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;19">Corrientes</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,35 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,06 <i class="fas fa-equals"></i></td>
             <td>6,50</td>
             <td>7,00</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-20">Barranqueras</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Barranqueras" data-id="20" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;20">Barranqueras</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,35 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,03 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>6,00</td>
             <td>6,50</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-23">Goya</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Goya" data-id="23" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;23">Goya</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,54 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,50 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,20</td>
             <td>5,70</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-24">Reconquista</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Reconquista" data-id="24" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;24">Reconquista</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,25 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,24 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,10</td>
             <td>5,30</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-26">La Paz</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="La Paz" data-id="26" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;26">La Paz</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,78 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,76 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,80</td>
             <td>6,15</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-29">Paraná</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Paraná" data-id="29" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;29">Paraná</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">1,71 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">1,83 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>4,70</td>
             <td>5,00</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-30">Santa Fe</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Santa Fe" data-id="30" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;30">Santa Fe</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">1,82 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,02 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5,30</td>
             <td>5,70</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-32">Victoria</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Victoria" data-id="32" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;32">Victoria</p></td>
             <td>Paraná/Delta</td>
-            <td style="background-color: #ea9999 !important;">2,00 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,56 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>4,60</td>
             <td>5,90</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-34">Rosario</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Rosario" data-id="34" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;34">Rosario</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">1,24 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">1,88 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,00</td>
             <td>5,25</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-55">Puerto Pilcomayo</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Puerto Pilcomayo" data-id="55" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;55">Puerto Pilcomayo</p></td>
             <td>Paraguay</td>
-            <td style="background-color: #fff2cc !important;">4,36 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">4,44 <i class="fas fa-equals"></i></td>
             <td>5,35</td>
             <td>6,00</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-57">Puerto Formosa</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Puerto Formosa" data-id="57" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;57">Puerto Formosa</p></td>
             <td>Paraguay</td>
-            <td style="background-color: #fff2cc !important;">4,47 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">4,75 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>7,80</td>
             <td>8,30</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-65">San Javier</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="San Javier" data-id="65" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;65">San Javier</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #f6b26b !important;">1,04 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">0,80 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>8,00</td>
             <td>10,00</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-68">Santo Tomé</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Santo Tomé" data-id="68" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;68">Santo Tomé</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #fff2cc !important;">2,76 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">1,81 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>11,50</td>
             <td>12,50</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-72">Paso de los Libres</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Paso de los Libres" data-id="72" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;72">Paso de los Libres</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #fff2cc !important;">4,41 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">2,70 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>7,50</td>
             <td>8,50</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-79">Concordia</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Concordia" data-id="79" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;79">Concordia</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #fff2cc !important;">4,96 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">6,26 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>11,00</td>
             <td>12,50</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-81">Concepción del Uruguay</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Concepción del Uruguay" data-id="81" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;81">Concepción del Uruguay</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #f6b26b !important;">1,35 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">2,65 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5,30</td>
             <td>6,30</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-84">Boca Gualeguaychú</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Boca Gualeguaychú" data-id="84" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;84">Boca Gualeguaychú</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #f6b26b !important;">0,92 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #cfe2f3 !important;">2,16 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>2,90</td>
             <td>3,10</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-153">Bahia Negra</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Bahia Negra" data-id="153" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;153">Bahia Negra</p></td>
             <td>Paraguay</td>
-            <td style="background-color: #cfe2f3 !important;">5,30 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #cfe2f3 !important;">5,27 <i class="fas fa-equals"></i></td>
             <td>5,00</td>
             <td>5,50</td>
             <td></td>
@@ -206,54 +206,54 @@
         <td></td>
       </thead>
         <tr>
-            <td><a href="#hidrograma-91">Guaíra Porto</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Guaíra Porto" data-id="91" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;940">Guaíra Porto</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">7550 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">7700 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>20000</td>
             <td>25000</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-92">Represa Itaipú</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Represa Itaipú" data-id="92" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;941">Represa Itaipú</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">6500 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">7600 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>20000</td>
             <td>25000</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-8">Andresito</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Andresito" data-id="8" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;857">Andresito</p></td>
             <td>Iguazu</td>
-            <td style="background-color: #f6b26b !important;">745 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">1257 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5000</td>
             <td>6500</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-93">Confluencia</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Confluencia" data-id="93" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;942">Confluencia</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">6885 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">405 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>25000</td>
             <td>30000</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-87">Yacyretá afluente</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Yacyretá afluente" data-id="87" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;936">Yacyretá afluente</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">8400 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">8700 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>25000</td>
             <td>30000</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td><a href="#hidrograma-88">Yacyretá efluente</a></td>
+            <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Yacyretá efluente" data-id="88" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;937">Yacyretá efluente</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">8800 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">9400 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>25000</td>
             <td>30000</td>
             <td></td>
