--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -29,8 +29,9 @@
   <meta name="twitter:description"
     content="Es un organismo científico tecnológico descentralizado que tiene por objetivo satisfacer los requerimientos de estudio,    investigación, desarrollo y prestación de servicios especializados en el campo del aprovechamiento y preservación del agua.    Depende de la Secretaría de Infraestructura y Política Hídrica de la Nación,    del [Ministerio de Obras Públicas](https://www.argentina.gob.ar/obras-publicas) de la República Argentina.">
   <meta name="twitter:image" content="https://www.ina.gob.ar/img/Logo_ina_chico.png">
-  <link rel="stylesheet" href="styles/bootstrap.min.css"
-    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="styles/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" href="styles/poncho.min.css">
   <!-- <link rel="stylesheet" href="/poncho/dist/css/argentina.css"> -->
@@ -53,6 +54,23 @@
     .print-header {
       display: none;
     }
+
+    .modal.fade.show {
+      opacity: 1 !important;
+      display: block !important;
+    }
+
+    p.as-link {
+      color: #0d6efd;            /* Bootstrap link blue */
+      text-decoration: none;
+      cursor: pointer;
+      display: inline;           /* inline so it behaves like a link */
+    }
+
+    p.as-link:hover {
+      text-decoration: underline;
+    }
+
     
     @media print {
 
@@ -90,6 +108,21 @@
     <img src="img/membrete-2025_con_logo_slhi.jpg" alt="Instituto Nacional del Agua" />
   </div>
   <div id="report_container"></div>
+  <!-- MODAL -->
+  <div class="modal fade" id="hidrolinksModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-sm"> <!-- small modal -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Barranqueras</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body d-flex flex-column text-center gap-2">
+        <a href="#hidrograma-19" id="hidrograma-link" class="btn btn-link" onclick="closeModal()">hidrograma</a>
+        <a href="https://alerta.ina.gob.ar/a5/secciones?seriesId=19" target="_blank" id="secciones-link" class="btn btn-link" onclick="closeModal()">visualizador</a>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     window.onload = function() {
       fetch("saved.html")
@@ -98,6 +131,22 @@
           document.getElementById('report_container').innerHTML = html;
         });
     }
+    function closeModal() {
+      const modalEl = document.getElementById('hidrolinksModal');
+      const modal = bootstrap.Modal.getInstance(modalEl);
+      modal.hide();
+    }
+    const hidrolinksModal = document.getElementById('hidrolinksModal');
+    hidrolinksModal.addEventListener('show.bs.modal', function (event) {
+      const trigger = event.relatedTarget;
+      const title = trigger.getAttribute('data-title');
+      const id = trigger.getAttribute('data-id');
+      const seccionesurl = trigger.getAttribute('data-seccionesurl');
+
+      hidrolinksModal.querySelector('.modal-title').textContent = title;
+      hidrolinksModal.querySelector('#hidrograma-link').setAttribute("href",`#hidrograma-${id}`);
+      hidrolinksModal.querySelector('#secciones-link').setAttribute("href", seccionesurl);
+    });
   </script>
 </body>
 
