--- a/public/saved.html
+++ b/public/saved.html
@@ -4,15 +4,16 @@
     <div>
   <div class="container-reporte">
     <h2>Reporte diario</h2>
-    <div>Fecha de emisión: <b>30/05/2025</b></div>
+    <div>Fecha de emisión: <b>04/06/2025</b></div>
     <h3>Situación meteorológica</h3>
-    <h4>Mapa de acumulado semanal</h4>
-    <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales_/2025/05/pp_semanal_20250523_surf.png></p>
+    <div class="mapas-flex-grid">
+      <div class="mapas-flex-item">Precipitación acumulada semanal</div>
+      <div class="mapas-flex-item">Pronóstico a 7 días</div>
+      <div class="mapas-flex-item"><img class="mapa" src=https://alerta.ina.gob.ar/ina/13-SYNOP/mapas_semanales_/2025/05/pp_semanal_20250528_surf.png></div>
+      <div class="mapas-flex-item"><img class="mapa" src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025060406.2025060412.suma.mask.png></div>
+    </div>
     <p>Para lo que resta del día se esperan precipitaciones sobre aportes al Paraná en territorio argentino por margen derecha, así como sobre aportes al Bermejo y Pilcomayo. Para lo que resta de la semana, se esperan precipitaciones en gran parte de la cuenca, con acumulados mayores esperados sobre el tramo medio e inferior del Paraguay, sobre el tramo del Paraná en territorio argentino - paraguayo y sobre aportes al Salado Juramento y aportes por margen derecha al Paraná en territorio argentino.</p>
-    <h4>Mapa de pronóstico a 7 días</h4>
-    <p><img class="mapa" src=https://alerta.ina.gob.ar/ina/34-GFS/mapas/suma/gfs.2025053006.2025053012.suma.png></p>
     <h3>Situación hidrológica</h3>
-    <h4>Tabla de situación y perspectiva a corto plazo</h4>
     <table class="tabla-hidro">
       <thead>
         <td>Estación</td>
@@ -26,7 +27,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Puerto Iguazú" data-id="9" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;9">Puerto Iguazú</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">7,40 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">6,70 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>25,00</td>
             <td>28,00</td>
             <td></td>
@@ -35,7 +36,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Corrientes" data-id="19" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;19">Corrientes</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,30 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,19 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>6,50</td>
             <td>7,00</td>
             <td></td>
@@ -44,7 +45,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Barranqueras" data-id="20" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;20">Barranqueras</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,25 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,30 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>6,00</td>
             <td>6,50</td>
             <td></td>
@@ -53,7 +54,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Goya" data-id="23" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;23">Goya</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,55 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,84 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,20</td>
             <td>5,70</td>
             <td></td>
@@ -62,7 +63,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Reconquista" data-id="24" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;24">Reconquista</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,32 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,56 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5,10</td>
             <td>5,30</td>
             <td></td>
@@ -71,7 +72,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="La Paz" data-id="26" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;26">La Paz</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,91 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">3,17 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5,80</td>
             <td>6,15</td>
             <td></td>
@@ -80,7 +81,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Paraná" data-id="29" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;29">Paraná</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">1,92 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">2,05 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>4,70</td>
             <td>5,00</td>
             <td></td>
@@ -89,7 +90,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Santa Fe" data-id="30" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;30">Santa Fe</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">2,00 <i class="fas fa-equals"></i></td>
+            <td style="background-color: #f6b26b !important;">2,17 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5,30</td>
             <td>5,70</td>
             <td></td>
@@ -98,7 +99,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Victoria" data-id="32" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;32">Victoria</p></td>
             <td>Paraná/Delta</td>
-            <td style="background-color: #f6b26b !important;">2,63 <i class="fas fa-equals"></i></td>
+            <td style="background-color: #f6b26b !important;">2,70 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>4,60</td>
             <td>5,90</td>
             <td></td>
@@ -107,7 +108,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Rosario" data-id="34" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;34">Rosario</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">1,93 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">1,85 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,00</td>
             <td>5,25</td>
             <td></td>
@@ -116,7 +117,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Puerto Pilcomayo" data-id="55" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;55">Puerto Pilcomayo</p></td>
             <td>Paraguay</td>
-            <td style="background-color: #fff2cc !important;">4,60 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">4,56 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5,35</td>
             <td>6,00</td>
             <td></td>
@@ -125,7 +126,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Puerto Formosa" data-id="57" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;57">Puerto Formosa</p></td>
             <td>Paraguay</td>
-            <td style="background-color: #fff2cc !important;">5,06 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">5,17 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>7,80</td>
             <td>8,30</td>
             <td></td>
@@ -134,7 +135,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="San Javier" data-id="65" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;65">San Javier</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #cfe2f3 !important;">3,47 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">1,68 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>8,00</td>
             <td>10,00</td>
             <td></td>
@@ -143,7 +144,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Santo Tomé" data-id="68" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;68">Santo Tomé</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #cfe2f3 !important;">6,96 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #fff2cc !important;">5,11 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>11,50</td>
             <td>12,50</td>
             <td></td>
@@ -152,7 +153,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Paso de los Libres" data-id="72" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;72">Paso de los Libres</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #cfe2f3 !important;">5,70 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #cfe2f3 !important;">7,29 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>7,50</td>
             <td>8,50</td>
             <td></td>
@@ -161,7 +162,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Concordia" data-id="79" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;79">Concordia</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #cfe2f3 !important;">8,56 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #cfe2f3 !important;">10,00 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>11,00</td>
             <td>12,50</td>
             <td></td>
@@ -170,7 +171,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Concepción del Uruguay" data-id="81" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;81">Concepción del Uruguay</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #cfe2f3 !important;">3,78 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #cfe2f3 !important;">4,65 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>5,30</td>
             <td>6,30</td>
             <td></td>
@@ -179,7 +180,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Boca Gualeguaychú" data-id="84" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;84">Boca Gualeguaychú</p></td>
             <td>Uruguay</td>
-            <td style="background-color: #cfe2f3 !important;">2,34 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #cfe2f3 !important;">2,08 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>2,90</td>
             <td>3,10</td>
             <td></td>
@@ -199,7 +200,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Guaíra Porto" data-id="91" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;940">Guaíra Porto</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">8000 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">7300 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>20000</td>
             <td>25000</td>
             <td></td>
@@ -208,7 +209,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Represa Itaipú" data-id="92" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;941">Represa Itaipú</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">7000 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">7300 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>20000</td>
             <td>25000</td>
             <td></td>
@@ -217,7 +218,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Andresito" data-id="8" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;857">Andresito</p></td>
             <td>Iguazu</td>
-            <td style="background-color: #ea9999 !important;">420 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #f6b26b !important;">654 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>5000</td>
             <td>6500</td>
             <td></td>
@@ -226,7 +227,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Confluencia" data-id="93" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;942">Confluencia</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">7928 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">7791 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>25000</td>
             <td>30000</td>
             <td></td>
@@ -235,7 +236,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Yacyretá afluente" data-id="87" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;936">Yacyretá afluente</p></td>
             <td>Paraná</td>
-            <td style="background-color: #ea9999 !important;">9000 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">8200 <i class="fa fa-arrow-up" aria-hidden="true"></i></td>
             <td>25000</td>
             <td>30000</td>
             <td></td>
@@ -244,7 +245,7 @@
         <tr>
             <td><p class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="Yacyretá efluente" data-id="88" data-seccionesurl="https://alerta.ina.gob.ar/a5/secciones?seriesId&#x3D;937">Yacyretá efluente</p></td>
             <td>Paraná</td>
-            <td style="background-color: #f6b26b !important;">9700 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
+            <td style="background-color: #ea9999 !important;">8600 <i class="fa fa-arrow-down" aria-hidden="true"></i></td>
             <td>25000</td>
             <td>30000</td>
             <td></td>
